Fixed up the video on mobile view

--- a/html/css/justified-nav.css
+++ b/html/css/justified-nav.css
@@ -69,6 +69,12 @@ h1 {
   margin: 30 auto;
 }
 
+iframe,
+.vimeo-wrapper {
+  width: 300px;
+  height: 169px;
+}
+
 /* Responsive: Portrait tablets and up */
 @media (min-width: 768px) {
   .nav-justified {
